overflow fix

--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -15601,6 +15601,7 @@ figure.woocommerce-product-gallery__wrapper {
 #rinrose_home-splash {
   height: calc(100vh - 127px);
   position: relative;
+  overflow: hidden;
 }
 
 #rinrose_home-splash_video {
