--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -1,6 +1,7 @@
 #rinrose_home-splash {
     height: calc(100vh - 127px);
     position: relative;
+    overflow: hidden;
 }
 #rinrose_home-splash_video {
     position: absolute;
